src/popup/main.css
:root {
    --primary-color: #6060f4;
    --text-color: #494949;
    --secondary-text-color: #9f9f9f;
    --border-color: #dcdcdc;
    --error-color: #8f4242;
}

html,
body {
    min-height: 90px;
    min-width: 210px;
    width: fit-content;
    max-width: 244px;
    margin: 0;

    color: var(--text-color);
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    font-size: 12px;
    line-height: 1.5;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body {
    padding: 15px;
    margin: 0;
}

p,
ul,
dl {
    margin: 0;
    padding: 0;
}

button {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1;
    height: 27px;
    border: 1px solid var(--border-color);
    border-radius: 3px;
    padding: 5px 10px;
    background: white;
    color: var(--text-color);
    transition: all 0.3s ease-in;
}

button:disabled {
    background: white !important;
    color: var(--secondary-text-color) !important;
}

button:not(:disabled):hover {
    filter: drop-shadow(0 0 2px var(--primary-color));
    cursor: pointer;
}

input:focus-visible,
button:focus-visible {
    outline: 2px solid var(--primary-color);
}

